--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body{
     outline: none;
     font-size: 18px;
     display: none;
+    font-family: 'inter', sans-serif;
 }
 
 #notes{
@@ -88,6 +89,11 @@ body{
     visibility: visible;
 }
 
+.note-now{
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+}
 .note:hover{
     box-shadow: 0 2px 10px rgba(71,71,71,0.4);
 }
@@ -95,5 +101,10 @@ body{
 @media screen and (max-width:600px) {
     #notes{
         grid-template-columns: 1fr;
+    }
+    .note-aria{
+    padding: 10px;
+    margin: 30px;
+    width: 70%;
     }
 }
